--- a/package.json
+++ b/package.json
@@ -12,20 +12,26 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.16.0",
+    "framer-motion": "10.18.0",
+    "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.298",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.177.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/lodash.throttle": "^4.1.9",
     "@types/node": "^22.13.4",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
