--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "framer-motion": "^10.18.0",
     "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.475.0",
+    "r": "^0.0.5",
     "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "rollup": "^4.18.0",
     "@types/lodash.throttle": "^4.1.9",
     "@types/node": "^22.13.4",
     "@types/react": "^18.3.1",
