--- a/package.json
+++ b/package.json
@@ -7,41 +7,29 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "codegen": "wagmi generate"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@firebase/auth": "^1.10.7",
     "@firebase/storage": "^0.13.13",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
-    "@reown/appkit": "^1.0.0",
-    "@reown/appkit-adapter-wagmi": "^1.0.0",
-    "@solana/wallet-adapter-wallets": "^0.19.37",
-    "@solana/web3.js": "^1.98.2",
     "@tanstack/react-query": "^5.80.7",
     "@tanstack/react-query-devtools": "^5.80.7",
-    "@wagmi/cli": "^2.3.1",
-    "@wagmi/connectors": "^5.8.5",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "crypto": "^1.0.1",
-    "ethers": "^6.14.4",
-    "express": "^5.1.0",
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^10.18.0",
     "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.475.0",
-    "r": "^0.0.5",
-    "razorpay": "^2.9.6",
+    "qrcode.react": "^4.2.0", 
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.298",
-    "react-razorpay": "^3.0.1",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0",
@@ -50,7 +38,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "rollup": "^4.18.0",
     "@types/lodash.throttle": "^4.1.9",
     "@types/node": "^22.13.4",
     "@types/react": "^18.3.1",
@@ -64,7 +51,6 @@
     "postcss": "^8.5.5",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
