--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "framer-motion": "^10.18.0",
     "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.475.0",
-    "qrcode.react": "^4.2.0", 
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
@@ -32,13 +32,14 @@
     "react-parallax-tilt": "^1.7.298",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
+    "rollup": "^4.43.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.177.0"
   },
   "engines": {
-  "node": "20.x"
-},
+    "node": "20.x"
+  },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/lodash.throttle": "^4.1.9",
@@ -57,5 +58,4 @@
     "vite": "^6.1.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
-  
 }
