--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@firebase/storage": "^0.13.13",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
-    "@tanstack/react-query": "^5.80.7",
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@tanstack/react-query": "^5.81.2",
     "@tanstack/react-query-devtools": "^5.80.7",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
