--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.298",
@@ -36,7 +37,9 @@
     "rollup": "^4.43.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.177.0"
+    "three": "^0.177.0",
+    "viem": "^2.31.4",
+    "wagmi": "^2.15.6"
   },
   "engines": {
     "node": "20.x"
